<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/action_clear_list"
        android:orderInCategory="100"
        android:title="@string/clear_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/playlist_option"
        app:showAsAction="never" />

    <item
    android:id="@+id/action_color_picker"
    android:orderInCategory="100"
    android:title="@string/action_color_picker"
    app:showAsAction="never" />

    <item
        android:id="@+id/action_stop_stream"
        android:orderInCategory="100"
        android:title="@string/stop_stream"
        android:checkable="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_stay_awake"
        android:orderInCategory="100"
        android:title="@string/stay_awake"
        android:checkable="true"
        app:showAsAction="never"/>


</menu>
